<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="10dp"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/char_code_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:fontFamily="@font/roboto_black"
            android:gravity="center"
            android:text="@string/abbreviation"
            android:textColor="@color/black"
            android:background="@color/red"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="60"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="horizontal"
                android:gravity="center|start">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_black"
                    android:gravity="center"
                    android:text="@string/equal"
                    android:textSize="18sp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/currency_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_black"
                    android:gravity="center"
                    android:text="@string/currency_example"
                    android:textSize="18sp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <TextView
                android:id="@+id/currency_name_tv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/currency_name"
                android:textColor="@color/black"
                android:gravity="center|start"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="22"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/currency_delta_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/delta"
                    android:gravity="center"
                    />

                <ImageView
                    android:id="@+id/currency_delta_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_down"/>
            </LinearLayout>

            <TextView
                android:id="@+id/last_date_tv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:text="@string/last_date"
                android:gravity="start|center"
                />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>